# KonMari

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  INSTALL.md  LAUNCH_CHECKLIST.md  Makefile  README.md  SECURITY.md  SKILL.md  context_limits.md  gratitude_templates.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
konmari/: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SKILL.md
konmari/examples/: README.md  conversation_example.md  sample_cleanup_proposal.md
konmari/references/: context_limits.md  gratitude_templates.md
konmari/scripts/: analyze_repo.py
scripts/: build_skill.sh  install_skill.sh
skill_package/: CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SKILL.md
skill_package/scripts/: analyze_repo.py
