[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konmari-skill"
version = "1.0.0"
description = "Repository hygiene skill inspired by Marie Kondo's KonMari Method"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Hmbown"},
]
keywords = [
    "konmari",
    "cleanup",
    "declutter",
    "repository",
    "codebase",
    "hygiene",
    "maintenance",
    "cli",
    "development-tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/Hmbown/KonMari"
Repository = "https://github.com/Hmbown/KonMari.git"
Documentation = "https://github.com/Hmbown/KonMari/blob/main/SKILL.md"
Bug-Tracker = "https://github.com/Hmbown/KonMari/issues"

[project.scripts]
konmari = "scripts.analyze_repo:main"

[tool.setuptools]
packages = []

